@@ -5,6 +5,7 @@
 #
 # Replace DSN-NAME with your ODBC connection name
 #
+driver=sun.jdbc.odbc.JdbcOdbcDriver
 url=jdbc:odbc:DSN-NAME
 
 #
